[gd_scene load_steps=3 format=3 uid="uid://yx12d3k04qf4"]

[ext_resource type="Script" uid="uid://8iwafcmm1qn0" path="res://cards/card_2d.gd" id="1_7c8oq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2y84j"]
size = Vector2(304, 419)

[node name="Card2D" type="Area2D"]
script = ExtResource("1_7c8oq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2y84j")

[node name="NameLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = -149.0
offset_top = -187.0
offset_right = 146.0
offset_bottom = -153.0
theme_override_colors/font_outline_color = Color(0.333333, 0.333333, 0.333333, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.333333)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_outline_size = 10
horizontal_alignment = 1
vertical_alignment = 1

[node name="CostLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = -171.0
offset_top = -222.0
offset_right = -107.0
offset_bottom = -158.0
theme_override_colors/font_outline_color = Color(0.266667, 0.266667, 0.266667, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.333333)
theme_override_constants/outline_size = 15
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_outline_size = 15
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = -120.0
offset_top = 8.0
offset_right = 116.0
offset_bottom = 187.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.333333)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_offset_x = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="TypeLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = -81.0
offset_top = 3.0
offset_right = 78.0
offset_bottom = 37.0
theme_override_colors/default_color = Color(0.2, 0.2, 0.2, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_constants/outline_size = 1
horizontal_alignment = 1
vertical_alignment = 1
